Fix alignment of speaker images and borders

--- a/2016/styles/_speakers.scss
+++ b/2016/styles/_speakers.scss
@@ -7,8 +7,8 @@
 
 .speaker__photo {
   text-align: center;
-  background-color: #bfd0d8;
   padding-top: 10px;
+  margin: auto;
   margin-bottom: 20px;
   max-width: 305px;
 
@@ -18,6 +18,7 @@
     font-size: 5rem;
     line-height: 250px;
     margin: 0 auto 5px;
+    border: 5px solid #bfd0d8;
   }
 }
 
